refactor: implementa herança do BaseController em todos os controllers